fixed expandeddish edit buttons visibile to oher users

--- a/src/app/components/browsePageSkeleton/browsePageSkeleton.css
+++ b/src/app/components/browsePageSkeleton/browsePageSkeleton.css
@@ -6,7 +6,7 @@
     gap: 1rem;
 }
 
-.rectSkeleton {
+.browse_rectSkeleton {
     width: 100%;
 }
 
